--- a/public/index.html
+++ b/public/index.html
@@ -61,11 +61,11 @@
 </div>
 
 <footer>
-  <div class="container">
-    <span class="copyright">&copy; 2016 Seeking Abstraction - <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a></span>
-  </div>
+    <div class="container">
+        <span class="copyright">&copy; 2016 Seeking Abstraction - <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0</a></span>
+    </div>
 </footer>
 
-</body>
-</html>
+    </body>
+    </html>
 
