--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   </div>
   <section class="summary">
-    This year I started to get into functional programming languages. I started the year with Elixir and ended starting to learn Haskell. Between those, I learned Elm and really like it. Elm is an ML-family language built in Haskell. I use to think about Elm as Haskell lite but with the many changes to simplify the language I now think of it more as it’s own language. The stand out features of Elm are:  <a href="/post/elm/">Read More...</a>
+    Last year I started to get into functional programming languages. I started the year with Elixir and ended starting to learn Haskell. Between those, I learned Elm and really like it. Elm is an ML-family language built in Haskell. I use to think about Elm as Haskell lite but with the many changes to simplify the language I now think of it more as it’s own language. The stand out features of Elm are:  <a href="/post/elm/">Read More...</a>
   </section>
 </article>
 
